Yellow_Belt/Week 5/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:58:18 **** Incremental Build of configuration Debug for project Refactoring_code ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Refactoring_code.o" "..\\src\\Refactoring_code.cpp" 
..\src\Refactoring_code.cpp: In constructor 'Student::Student(const string&, const string&, const string&)':
..\src\Refactoring_code.cpp:18:50: error: class 'Student' does not have any field named 'Profession'
      Human(_Name), FavouriteSong(favouriteSong), Profession(_Profession) {}
                                                  ^~~~~~~~~~
..\src\Refactoring_code.cpp: In constructor 'Teacher::Teacher(const string&, const string&, const string&)':
..\src\Refactoring_code.cpp:35:37: error: class 'Teacher' does not have any field named 'Profession'
      Human(name), Subject(subject), Profession(_Profession) {}
                                     ^~~~~~~~~~
..\src\Refactoring_code.cpp: In constructor 'Policeman::Policeman(const string&, const string&)':
..\src\Refactoring_code.cpp:48:91: error: class 'Policeman' does not have any field named 'Profession'
     Policeman(const string& name, const string& _Profession = "Policeman") : Human(name), Profession(_Profession) {}
                                                                                           ^~~~~~~~~~
20:58:21 **** Incremental Build of configuration Debug for project Refactoring_code ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Refactoring_code.o" "..\\src\\Refactoring_code.cpp" 
..\src\Refactoring_code.cpp: In constructor 'Teacher::Teacher(const string&, const string&, const string&)':
..\src\Refactoring_code.cpp:37:48: error: class 'Teacher' does not have any field named 'Profession'
      Human(name, "Teacher"), Subject(subject), Profession(_Profession) {}
                                                ^~~~~~~~~~
20:58:38 **** Incremental Build of configuration Debug for project Refactoring_code ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Refactoring_code.o" "..\\src\\Refactoring_code.cpp" 
g++ -o Refactoring_code.exe "src\\Refactoring_code.o" 
21:37:29 **** Incremental Build of configuration Debug for project Refactoring_code ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Refactoring_code.o" "..\\src\\Refactoring_code.cpp" 
g++ -o Refactoring_code.exe "src\\Refactoring_code.o" 
22:39:12 **** Rebuild of configuration Debug for project Refactoring_code ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Refactoring_code.o" "..\\src\\Refactoring_code.cpp" 
g++ -o Refactoring_code.exe "src\\Refactoring_code.o" 
